--- a/src/index.html
+++ b/src/index.html
@@ -1,48 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <script src="/src/js/main.js" defer></script>
-    <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
     <title>Crypto Value</title>
 </head>
+
 <body>
     <div class="container">
-        <div class="container">
-            <div class="row header">
-                <div class="col-xs-12"> <h1>HEADER</h1></div>
-                <div class="left-col col-md-3">
-                    <select id="coin" onchange="update()" class="form-select" aria-label="Default select example">
-                        <option selected value="">Select crypto</option>
-                        <option value="btc">BTC</option>
+        <div class="row">
+            <div class="col-xs-12">
+                <h1>HEADER</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-3">
+                <div class="col-auto">
+                    <label class="visually-hidden" for="autoSizingSelect">Preference</label>
+                    <select class="form-select" id="coin" onchange="update()">
+                        <option value="">Select your Coin</option>
+                        <!-- <option value="btc">BTC</option>
                         <option value="eth">ETH</option>
+                        <option value="ltc">LTC</option>
+                        <option value="xrp">XRP</option>
+                        <option value="bch">BCH</option>
                         <option value="usdc">USDT</option>
-                      </select>
-                </div>
-                <div class="main col-md-6">
-                    <div class="input-group input-group-lg">
-                        <span class="input-group-text" id="inputGroup-sizing-lg">Buy</span>
-                        <input type="text" id="buy" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg">
-                      </div>
-                      <div> &nbsp;</div>
-                      <div class="input-group input-group-lg">
-                        <span class="input-group-text" id="inputGroup-sizing-lg">Sell</span>
-                        <input type="text" id="sell" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg">
-                      </div>
-                </div>
-                <div class="right-col col-md-3">
-                    <div class="input-group input-group-lg">
-                        <span class="input-group-text" id="inputGroup-sizing-lg">Dollar</span>
-                        <input type="text" id="bid" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg">
-                      </div>
+                        <option value="ada">CARD</option>
+                        <option value="sol">SOL</option>
+                        <option value="doge">DOGE</option> -->
+                    </select>
                 </div>
             </div>
-            <div class="row footer">
-                <div class="col-xs-12"></div>
+            <div class="col-md-6">
+                <div class="input-group input-group-lg mb-3">
+                    <span class="input-group-text">Buy</span>
+                    <input type="text" id="buy" class="form-control"
+                        aria-label="Dollar amount (with dot and two decimal places)">
+                </div>
+                <div class="input-group input-group-lg mb-3">
+                    <span class="input-group-text">Sell</span>
+                    <input type="text" id="sell" class="form-control"
+                        aria-label="Dollar amount (with dot and two decimal places)">
+                </div>
+            </div>
+            <div class="right-col col-md-3">
+                <div class="input-group input-group-lg">
+                    <span class="input-group-text" id="inputGroup-sizing-lg">Dollar</span>
+                    <input type="text" id="bid" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg">
+                  </div>
+            </div>
+        </div>
+        <div class="row footer">
+            <div class="col-xs-12">
+                <h1>FOOTER</h1>
             </div>
         </div>
     </div>
 </body>
+
 </html>
